# cozy-floem

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
examples/: cozy-rust-panel.rs  cozy-rust-tree-panel-sync.rs  cozy-rust-tree-panel.rs  cozy-simple-panel.rs  font-style.rs
examples/folding-svg/src/: main.rs
examples/font-style/: Cargo.toml
examples/font-style/src/: main.rs
examples/simple-ansi-to-style/: Cargo.toml
examples/simple-ansi-to-style/src/: main.rs
folding-svg/: Cargo.toml
folding-svg/src/: main.rs
font-style/src/: main.rs
libs/ansi-to-style/src/: lib.rs
libs/doc/: Cargo.toml
libs/doc/src/: config.rs  language.rs
libs/doc/src/lines/: char_buffer.rs  command.rs  cursor.rs  delta_compute.rs  edit.rs  editor_command.rs  fold.rs  indent.rs  layout.rs  line.rs  line_ending.rs  mod.rs  mode.rs  movement.rs  phantom_text.rs  register.rs  screen_lines.rs  selection.rs  signal.rs  soft_tab.rs  style.rs  text.rs  util.rs  word.rs
libs/doc/src/lines/buffer/: mod.rs  rope_text.rs  test.rs
libs/doc/src/lines/line/: update_lines.rs
libs/doc/src/syntax/: mod.rs
libs/doc/tests/: test_delta.rs  test_folding.rs  test_lines.rs  test_phantom.rs
libs/doc/tests/lines_util/: _init.rs  semantic.rs
libs/rust-resolve/: Cargo.toml
libs/rust-resolve/src/: async_command.rs  lib.rs  resolve.rs  sync_command.rs
readonly-panel/: Cargo.toml
readonly-panel/src/: data.rs  main.rs  view.rs
resolve-build/: Cargo.toml
resolve-build/src/: lib.rs  main.rs  resolve.rs
rust-detail-panel/: Cargo.toml
rust-detail-panel/src/: data.rs  main.rs  view.rs
src/: channel.rs  data.rs  lib.rs  view.rs
src/views/: drag_line.rs  mod.rs
src/views/panel/: data.rs  view.rs
src/views/panel/data/: lines.rs
src/views/tree_with_panel/: data.rs  mod.rs  panel_view.rs  tree_view.rs  view.rs
src/views/tree_with_panel/data/: cursor.rs  lines.rs  panel.rs  tree.rs
