[workspace]
members = ["folding-svg", "font-style", "readonly-panel", "resolve-build"]
resolver = "2"


[workspace.dependencies]
log = "=0.4.22"
custom-utils = "=0.10.17"
floem = { git="https://github.com/jm-observer/floem.git", branch = "main-fork-2", features = ["editor", "serde", "default-image-formats", "rfd-async-std", "vger"], default-features = false }
lapce-xi-rope = {git = "https://github.com/jm-observer/xi-editor.git", features = ["serde"]}
doc = {git = "https://github.com/jm-observer/doc.git"}
anyhow = "=1.0.95"
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["io-std", "io-util", "macros", "rt", "sync", "process", "rt-multi-thread"] }
cargo_metadata = "0.19.1"
parking_lot = { version = "0.12.1" }