[workspace]
members = [ ".", "examples/simple-ansi-to-style", "examples/folding-svg","libs/ansi-to-style", "libs/rust-resolve", "libs/doc"]
resolver = "2"

[workspace.dependencies]
log = "=0.4.22"
custom-utils = { version = "=0.10.17", default-features = false, features = ["dev", "logger"] }
#floem = { git="https://github.com/jm-observer/floem.git", branch = "main-fork-2", features = ["editor", "serde", "default-image-formats", "rfd-async-std", "vger", "track-panic"], default-features = false }
floem = {git ="https://github.com/lapce/floem.git", rev = "b7964b2", features = ["serde", "default-image-formats", "rfd-async-std", "vger"], default-features = false }
lapce-xi-rope = {git = "https://github.com/jm-observer/xi-editor.git", features = ["serde"]}
doc = {path = "libs/doc"}
anyhow = "=1.0.95"
serde = "1.0.135"
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["io-std", "io-util", "macros", "rt", "sync", "process", "rt-multi-thread", "time"] }
cargo_metadata = "0.19.1"
parking_lot = { version = "0.12.1" }
peniko = "=0.3.1"
vte = "=0.14.1"
ansi-to-style = {path = "libs/ansi-to-style"}

lsp-types = { version = "0.95.1", features = ["proposed"] }
im                = { version = "15.0.0", features = ["serde"] }
smallvec          = { version = "1.13.2" }
itertools = "0.12.1"
slotmap     = "1.0"
tree-sitter = "0.22.6"
ahash       = "0.8.11"
hashbrown   = { version = "0.14.5", features = ["raw"] }
regex             = { version = "1.10.5" }
strum             = { version = "0.26.2" }
strum_macros      = { version = "0.26.2" }
thiserror         = { version = "1.0" }
libloading  = "0.8.1"
directories       = { version = "4.0.1" }
arc-swap    = "1.6.0"
memchr = "2.7.1"
unicode-segmentation = "1.12.0"
bitflags = "2.6.0"
cosmic-text = { version = "0.12.1", features = ["shape-run-cache"] }

[package]
name = "cozy-floem"
version = "0.1.0"
edition = "2021"

[dependencies]
log = {workspace = true}
floem = {workspace = true}
lapce-xi-rope = {workspace = true}
doc = {workspace = true}
anyhow = {workspace = true}
tokio = {workspace = true}
cargo_metadata = {workspace = true}
ansi-to-style = {workspace = true}
parking_lot = {workspace = true}

[dev-dependencies]
custom-utils = {workspace = true}
rust-resolve = { path = "libs/rust-resolve"}
tokio = {workspace = true}
