[package]
name = "resolve-build"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {workspace = true}
serde_json = {workspace = true}
cargo_metadata = {workspace = true}
custom-utils = {workspace = true}
log = {workspace = true}
anyhow = {workspace = true}
floem = {workspace = true}
readonly-panel = {path = "../readonly-panel"}
parking_lot = {workspace = true}
doc = {workspace = true}